--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,10 @@
     <string name="edt_pass">Password</string>
     <string name="edt_confirmPass">Confirm Password</string>
     <string name="edt_name">Name</string>
+    <string name="edt_city">City, Street</string>
+    <string name="edt_Url">Url Image</string>
+    <string name="edt_info">Information</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
