--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,14 @@
     <string name="edt_city">City, Street</string>
     <string name="edt_Url">Url Image</string>
     <string name="edt_info">Information</string>
+    <string name="txt_question">You don´t have an account? </string>
+    <string name="btn_register">Register </string>
+    <string name="btn_remember">Remember Password </string>
+    <string name="btn_cancel">Cancel </string>
+    <string name="btn_regain">Regain Pass </string>
+    <string name="btn_send">Send Email </string>
+    <string name="btn_add">Add </string>
+    <string name="btn_loguot">Log out </string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
