--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,16 @@
     <string name="btn_add">Add </string>
     <string name="btn_loguot">Log out </string>
 
+    <string name="select_language">Selecciona un idioma</string>
+    <string-array name="languages">
+        <item>Español</item>
+        <item>Inglés</item>
+        <item>Francés</item>
+        <item>Alemán</item>
+    </string-array>
+
+
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
