--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -23,8 +23,8 @@
 
     <string name="select_language">Select Language </string>
     <string-array name="languages">
-        <item>Spanish</item>
         <item>English</item>
+        <item>Español</item>
     </string-array>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
