--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -23,14 +23,21 @@
 
     <string name="select_language">Select Language </string>
     <string-array name="languages">
-        <item>Spanish</item>
         <item>English</item>
+        <item>Español</item>
+    </string-array>
+    <string-array name="language_codes">
+        <item>en</item>
+        <item>es</item>
     </string-array>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="btn_google">Sign In with Google</string>
     <string name="btn_signIn">Sign In</string>
     <string name="btn_edit">Edit</string>
+    <string name="txt_opcionTheme">Change theme</string>
+    <string name="txt_claro">Light</string>
+    <string name="txt_oscuro">Dark</string>
     <string name="txt_notificaciones">Notifications</string>
     <string name="txt_opcionNotifi">Enable Notifications</string>
     <string name="txt_activarNotif">Activate</string>
