--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -32,6 +32,18 @@
         <item>es</item>
     </string-array>
 
+    <string-array name="cities_array">
+        <item>Sevilla</item>
+        <item>Málaga</item>
+        <item>Cádiz</item>
+        <item>Granada</item>
+        <item>Córdoba</item>
+        <item>Almería</item>
+        <item>Huelva</item>
+        <item>Jaén</item>
+    </string-array>
+
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="btn_google">Sign In with Google</string>
     <string name="btn_signIn">Sign In</string>
