--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -31,6 +31,16 @@
         <item>es</item>
     </string-array>
 
+    <string-array name="cities_array">
+        <item>Sevilla</item>
+        <item>Málaga</item>
+        <item>Cádiz</item>
+        <item>Granada</item>
+        <item>Córdoba</item>
+        <item>Almería</item>
+        <item>Huelva</item>
+        <item>Jaén</item>
+    </string-array>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
