--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,14 +58,58 @@
     <string name="txt_activarNotif">Activar</string>
     <string name="txt_desactivarNotif">Desactivar</string>
     <string name="txt_idioma">Idioma</string>
+    <string name="txt_theme">Tema</string>
     <string name="txt_addHotel">Añadir Hotel</string>
     <string name="language_key">Idioma</string>
     <string name="language_saved_message">Idioma Guardado</string>
     <string name="ttl_about">Sobre nosotros</string>
     <string name="ttl_aplication">¿De qué trata?</string>
     <string name="ttl_dev">Desarrollador</string>
+    <string name="txt_det_hotel">Hotel:</string>
+    <string name="txt_det_city">Ciudad:</string>
+    <string name="txt_det_street">Calle:</string>
+    <string name="txt_det_info">Información adicional:</string>
+    <string name="txt_edit_title">Editar Hotel</string>
+    <string name="txt_reviews_ttl">Reseñas:</string>
+    <string name="txt_img_reg">Imagen</string>
+    <string name="txt_ape_reg">Apellidos</string>
+    <string name="txt_write">Escribe tu reseña</string>
+    <string name="txt_submit">Publicar</string>
+    <string name="ttl_add_hotel">Add Hotel</string>
+    <string name="ttl_review_user">Usuario:</string>
+    <string name="ttl_review_date">Fecha:</string>
+    <string name="ttl_review_rev">Reseña:</string>
+    <string name="add_success">Hotel añadido correctamente</string>
+    <string name="add_error">Error al añadir el hotel</string>
+    <string name="write_full">Por favor, completa todos los campos</string>
+    <string name="ttl_confirm_delete">Confirmar eliminación</string>
+    <string name="ttl_ask_delete">¿Estás seguro de eliminar este hotel?</string>
+    <string name="ttl_delete">Eliminar</string>
+    <string name="ttl_delete_success">Hotel eliminado correctamente</string>
+    <string name="ttl_delete_error">Error al eliminar el hotel</string>
+    <string name="ttl_dont_fund">Hotel no encontrado</string>
+    <string name="ttl_close_prof">Cerrar Sesión</string>
+    <string name="ttl_close_ask">¿Estás seguro de que quieres cerrar sesión?</string>
+    <string name="ttl_close_success">Sesión cerrada correctamente</string>
+    <string name="ttl_yes">Sí</string>
+    <string name="ttl_no">No</string>
+    <string name="txt_log">Ingrese correo y contraseña</string>
+    <string name="txt_log_success">Autenticación exitosa</string>
+    <string name="txt_log_verify">Verifique su correo</string>
+    <string name="txt_log_error">Error de email y/o contraseña</string>
+    <string name="txt_user_success">Usuario registrado correctamente</string>
+    <string name="txt_pass_error">Error en las contraseñas</string>
+    <string name="txt_rellenar">Rellene los campos</string>
+    <string name="txt_url_success">URL de la imagen de perfil guardada correctamente</string>
+    <string name="txt_account_success">Cuenta creada correctamente, se requiere verificación</string>
+    <string name="txt_user_error">Error al establecer el nombre de usuario</string>
+    <string name="txt_pass_change">Correo de cambido de contraseña enviado</string>
+    <string name="txt_process_error">Error, no se puedo completar el proceso</string>
+    <string name="txt_chang_applied">Cambios aplicados</string>
     <string name="Developer" translatable="false">Sergio Morales García</string>
     <string name="txt_follow">Síguenos</string>
     <string name="txt_aboutUs">Esta aplicación se ha desarrollado para el trabajo de final de grado del curso de 2º de Desarrollo de Aplicaciones Multiplataforma, del C.P.I.F.P. Málaga Tech Park.</string>
     <string name="txt_aboutAplication">Este proyecto se basa en un foro de hoteles en el que los usuarios pueden añadir hoteles en los que han estado y puntuarlos con estrellas y con una reseña. Los hoteles pertenecen a la comunidad de Andalucía y pueden ser filtrados por las ciudades que se encuentran dentro de la misma.</string>
+
+
 </resources>
